# libcaer_driver_rep

./: .gitignore  LICENSE
libcaer_driver_eventframe/: CMakeLists.txt  package.xml
libcaer_driver_eventframe/docs/: EVENTFRAME_CONTEXT.md
libcaer_driver_eventframe/include/libcaer_driver/device/: device.hpp
libcaer_driver_eventframe/launch/: driver_composition.launch.py  driver_node.launch.py  driver_with_vis.launch.py  recording_driver.launch.py  recording_driver_composable.launch.py  timesurface_vis.launch.py
libcaer_driver_eventframe/src/: driver.cpp  timesurface_vis_node.py
libcaer_driver_eventframe_msgs/: CMakeLists.txt  package.xml
libcaer_driver_eventframe_msgs/msg/: TimeSurface.msg
libcaer_driver_eventtrack/: CMakeLists.txt  package.xml
libcaer_driver_eventtrack/docs/: EVENTFRAME_CONTEXT.md
libcaer_driver_eventtrack/include/libcaer_driver/: driver.hpp  libcaer_wrapper.hpp
libcaer_driver_eventtrack/launch/: blinktrack_tracker.launch.py  blinktrack_tracker_only.launch.py  blinktrack_viz.launch.py  driver_composition.launch.py  driver_node.launch.py  driver_with_vis.launch.py  recording_driver.launch.py  recording_driver_composable.launch.py  timesurface_vis.launch.py
libcaer_driver_eventtrack/src/: blinktrack_core.py  blinktrack_node.py  log_view.py  reinit_click_node.py  timesurface_vis_node.py
libcaer_driver_eventtrack/src/device/: device.cpp
libcaer_driver_eventtrack/src/tracker/: blinktrack_pipeline.cpp  blinktrack_pipeline.h  blinktrack_tracker_node.cpp  intra_test.cpp
libcaer_driver_eventtrack/tools/: regen_te.py
libcaer_vendor_eventframe/: CMakeLists.txt  libcaer_vendor_eventframe-extras.cmake  package.xml
